plugins {
	id 'java'
	id 'org.springframework.boot' version '3.2.1'
	id 'io.spring.dependency-management' version '1.1.4'
}

group = 'SteveJapchae'

// build 이름
jar{
	archiveBaseName = 'memoraize'
	version = '0.0.1-SNAPSHOT'
	enabled = false
}

java {
	sourceCompatibility = '17'
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	// 유효성 검증
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
	compileOnly 'org.projectlombok:lombok'
	runtimeOnly 'com.mysql:mysql-connector-j'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'

	// Metadata-Extractor
	implementation 'com.drewnoakes:metadata-extractor:2.16.0'
	implementation 'com.adobe.xmp:xmpcore:6.1.11'

	// google-places API
	implementation 'com.google.maps:google-maps-places:0.11.0'

	// webflux
	implementation 'org.springframework.boot:spring-boot-starter-webflux'
	implementation 'com.google.maps:google-maps-services:2.2.0'
	implementation 'org.slf4j:slf4j-simple:1.7.25'

	// Spring Security OAUTH 2.1
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.security:spring-security-oauth2-client'

	// JWT token
	implementation 'io.jsonwebtoken:jjwt:0.12.3'

}

tasks.named('test') {
	useJUnitPlatform()
}
